# similarfaces

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
examples/: demo_comparison.py  detect_and_align.py
facelib/: aligner.py  models.py  scorer.py  utils.py
similarfaces/: __init__.py  aligner.py  detector.py  encoder.py  models.py  scorer.py  utils.py
