[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facelib"
version = "1.0.0"
description = "A production-ready Face Recognition library powered by ONNX"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Narek", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.1",
    "onnxruntime>=1.15.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/narek/similarfaces"

[tool.setuptools.packages.find]
where = ["."]
include = ["facelib*"]
